[gd_scene load_steps=15 format=3 uid="uid://2mmvclyd2pve"]

[ext_resource type="PackedScene" uid="uid://boj8wsv76jqlm" path="res://BrainVisualizer/UI/GenericElements/Vectors/Vector3iField.tscn" id="1_1uw6c"]
[ext_resource type="Script" path="res://BrainVisualizer/UI/Windows/Mapping_Definition/Mapping_Views/Prefab_Mapping.gd" id="1_tf7sq"]
[ext_resource type="Script" path="res://BrainVisualizer/UI/GenericElements/DropDown/MorphologyDropDown.gd" id="2_4r0x5"]
[ext_resource type="Script" path="res://BrainVisualizer/UI/GenericElements/TextBoxes/FloatInput.gd" id="3_2p8f4"]
[ext_resource type="Texture2D" uid="uid://cas8w6tbsvf0l" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/edit_S.png" id="5_dnfxt"]
[ext_resource type="Texture2D" uid="uid://bnxsffb0osoih" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/toggle_on_disabled.png" id="5_ymi66"]
[ext_resource type="Script" path="res://BrainVisualizer/UI/GenericElements/Buttons/ToggleButton.gd" id="6_e7x6h"]
[ext_resource type="Texture2D" uid="uid://c7titv7o7iu41" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/edit_C.png" id="6_wetbg"]
[ext_resource type="Texture2D" uid="uid://cvipwuuo2wa4i" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Delete_S.png" id="7_6bygk"]
[ext_resource type="Texture2D" uid="uid://bo26ji1fksorf" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Delete_C.png" id="8_bshfw"]
[ext_resource type="Texture2D" uid="uid://bs4u3x8y64aic" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/edit_H.png" id="9_bamov"]
[ext_resource type="Texture2D" uid="uid://c2uogfrcw4gbq" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Delete_H.png" id="9_civpw"]
[ext_resource type="Texture2D" uid="uid://b32s4sgq2hx1v" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/edit_D.png" id="10_trxtw"]
[ext_resource type="Texture2D" uid="uid://b2nlag14kcmcs" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Delete_D.png" id="10_yquya"]

[node name="Prefab_Mapping" type="HBoxContainer"]
offset_right = 1150.0
offset_bottom = 32.0
theme_type_variation = &"HBoxContainer_far"
script = ExtResource("1_tf7sq")

[node name="Morphology_List" type="OptionButton" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
clip_text = true
fit_to_longest_item = false
script = ExtResource("2_4r0x5")

[node name="Scalar" parent="." instance=ExtResource("1_1uw6c")]
custom_minimum_size = Vector2(264, 0)
layout_mode = 2
alignment = 1
label_x_text = &""
label_y_text = &""
label_z_text = &""

[node name="PSP" type="LineEdit" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
tooltip_text = "Post-Synaptic Potential
"
alignment = 1
script = ExtResource("3_2p8f4")
min_value = 0.0

[node name="Inhibitory" type="TextureButton" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_type_variation = &"ToggleButton"
texture_normal = ExtResource("5_ymi66")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("6_e7x6h")

[node name="Plasticity" type="TextureButton" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_type_variation = &"ToggleButton"
texture_normal = ExtResource("5_ymi66")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("6_e7x6h")

[node name="Plasticity_Constant" type="LineEdit" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
tooltip_text = "Plasticity"
alignment = 1
script = ExtResource("3_2p8f4")

[node name="LTP_Multiplier" type="LineEdit" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
alignment = 1
script = ExtResource("3_2p8f4")

[node name="LTD_Multiplier" type="LineEdit" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
alignment = 1
script = ExtResource("3_2p8f4")

[node name="edit" type="TextureButton" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_type_variation = &"TextureButton_icon"
texture_normal = ExtResource("5_dnfxt")
texture_pressed = ExtResource("6_wetbg")
texture_hover = ExtResource("9_bamov")
texture_disabled = ExtResource("10_trxtw")
ignore_texture_size = true
stretch_mode = 0

[node name="remove" type="TextureButton" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_type_variation = &"TextureButton_icon"
texture_normal = ExtResource("7_6bygk")
texture_pressed = ExtResource("8_bshfw")
texture_hover = ExtResource("9_civpw")
texture_disabled = ExtResource("10_yquya")
ignore_texture_size = true
stretch_mode = 0

[connection signal="float_confirmed" from="PSP" to="." method="_on_user_PSP"]
[connection signal="toggled" from="Plasticity" to="." method="_on_user_toggle_plasticity"]
[connection signal="pressed" from="edit" to="." method="_on_info_pressed"]
[connection signal="pressed" from="remove" to="." method="_on_delete_pressed"]
